--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Sans CNews v6</title>
+    <title>News Sans CNews v7</title>
     <style>
         :root { --bg: #121212; --card: #1e1e1e; --accent: #ffd700; --text: #eee; }
-        body { margin: 0; font-family: sans-serif; background: var(--bg); color: var(--text); padding-bottom: 20px; }
+        body { margin: 0; font-family: sans-serif; background: var(--bg); color: var(--text); padding-bottom: 30px; }
         header { background: #1a1a1a; padding: 15px; text-align: center; border-bottom: 1px solid #333; position: sticky; top: 0; z-index: 100; }
-        .controls { padding: 10px; display: flex; flex-direction: column; gap: 10px; background: #1a1a1a; }
-        .row { display: flex; gap: 8px; overflow-x: auto; scrollbar-width: none; }
-        input, select, button { background: #252525; color: white; border: 1px solid #333; padding: 10px; border-radius: 8px; }
-        .btn-cat { white-space: nowrap; cursor: pointer; border: 1px solid #444; }
-        .btn-cat.active { background: var(--accent); color: #000; font-weight: bold; }
+        .controls { padding: 10px; display: flex; flex-direction: column; gap: 10px; background: #1a1a1a; border-bottom: 1px solid #333; }
+        .row { display: flex; gap: 8px; overflow-x: auto; scrollbar-width: none; align-items: center; }
+        input, select, button { background: #252525; color: white; border: 1px solid #444; padding: 10px; border-radius: 8px; }
+        .btn-cat { white-space: nowrap; cursor: pointer; }
+        .btn-cat.active { background: var(--accent); color: #000; font-weight: bold; border-color: var(--accent); }
         #grid { padding: 12px; display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 15px; }
         .card { background: var(--card); border-radius: 12px; overflow: hidden; border: 1px solid #222; display: flex; flex-direction: column; }
         .card.is-pinned-source { border: 2px solid var(--accent); }
         .card img { width: 100%; height: 180px; object-fit: cover; background: #222; }
         .card-content { padding: 12px; }
-        .card-title { font-weight: bold; font-size: 1.1rem; margin-bottom: 8px; }
-        .card-meta { font-size: 0.8rem; color: #888; border-top: 1px solid #222; padding-top: 8px; }
-        #sourceModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 2000; padding: 20px; overflow-y: auto; }
-        .source-item { display: flex; justify-content: space-between; align-items: center; padding: 10px; border-bottom: 1px solid #333; gap: 10px;}
+        .card-title { font-weight: bold; font-size: 1.1rem; margin-bottom: 8px; line-height: 1.3; }
+        .card-meta { font-size: 0.8rem; color: #888; border-top: 1px solid #2d2d2d; padding-top: 8px; margin-top: auto; }
+        #sourceModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 2000; padding: 20px; overflow-y: auto; }
+        .source-item { display: flex; justify-content: space-between; align-items: center; padding: 12px; background: #252525; margin-bottom: 8px; border-radius: 8px; }
     </style>
 </head>
 <body>
@@ -34,21 +34,23 @@
         <button onclick="document.getElementById('sourceModal').style.display='block'">⚙️</button>
     </div>
     <div id="catBar" class="row"></div>
+    <div class="row">
+        <select id="sourceSelect" style="flex-grow:1"><option value="Tous">Toutes les sources</option></select>
+    </div>
 </div>
 
 <div id="grid"></div>
 
 <div id="sourceModal">
-    <h3>Configuration des sources</h3>
-    <div style="display:flex; flex-direction:column; gap:10px; background:#222; padding:15px; border-radius:10px;">
+    <h3>⚙️ Gérer les sources</h3>
+    <div style="display:flex; flex-direction:column; gap:10px; background:#1a1a1a; padding:15px; border-radius:10px; border:1px solid #444;">
         <input type="text" id="newName" placeholder="Nom du média">
-        <input type="text" id="newUrl" placeholder="Lien RSS">
-        <input type="text" id="newCat" placeholder="Catégorie perso">
-        <label><input type="checkbox" id="newPinned"> Épingler cette source (Priorité)</label>
-        <button onclick="addSource()" style="background:var(--accent); color:black; font-weight:bold;">AJOUTER</button>
+        <input type="text" id="newUrl" placeholder="Lien Flux RSS">
+        <input type="text" id="newCat" placeholder="Catégorie (ex: Tech, Info...)">
+        <button onclick="addSource()" style="background:var(--accent); color:black; font-weight:bold;">+ AJOUTER</button>
     </div>
     <div id="sourceList" style="margin-top:20px;"></div>
-    <button onclick="document.getElementById('sourceModal').style.display='none'" style="width:100%; margin-top:20px;">FERMER</button>
+    <button onclick="document.getElementById('sourceModal').style.display='none'" style="width:100%; margin-top:20px; background:#444;">FERMER</button>
 </div>
 
 <script>
@@ -58,17 +60,19 @@ let sources = JSON.parse(localStorage.getItem('nsc_sources')) || [
 ];
 let archived = JSON.parse(localStorage.getItem('nsc_archived')) || [];
 let currentCat = "Tous";
+let allArticlesParsed = [];
 
 function timeAgo(date) {
     const seconds = Math.floor((new Date() - date) / 1000);
-    if (seconds < 3600) return Math.floor(seconds/60) + " min";
-    if (seconds < 86400) return Math.floor(seconds/3600) + " h";
-    return Math.floor(seconds/86400) + " j";
+    if (seconds < 3600) return Math.floor(seconds/60) + "m";
+    if (seconds < 86400) return Math.floor(seconds/3600) + "h";
+    return Math.floor(seconds/86400) + "j";
 }
 
 async function fetchAll() {
-    let sourceBundles = {}; // On groupe les articles par source
-    document.getElementById('grid').innerHTML = "Chargement...";
+    let sourceBundles = {};
+    const grid = document.getElementById('grid');
+    grid.innerHTML = "<div style='text-align:center; padding:50px;'>Chargement...</div>";
     
     await Promise.all(sources.map(async s => {
         try {
@@ -86,33 +90,26 @@ async function fetchAll() {
         } catch(e) { console.error(s.name, e); }
     }));
 
-    // --- ALGORITHME D'ALTERNANCE (ROUND ROBIN) ---
+    // --- ALGORITHME DE TRI ---
     let pinnedArticles = [];
     let normalSources = [];
-
     Object.keys(sourceBundles).forEach(name => {
-        if (sources.find(s => s.name === name).pinned) {
-            pinnedArticles.push(...sourceBundles[name]);
-        } else {
-            normalSources.push(sourceBundles[name]);
-        }
+        const srcCfg = sources.find(s => s.name === name);
+        if (srcCfg && srcCfg.pinned) pinnedArticles.push(...sourceBundles[name]);
+        else normalSources.push(sourceBundles[name]);
     });
 
-    // Trier les épinglés par date
     pinnedArticles.sort((a,b) => b.date - a.date);
 
-    // Alterner les autres
-    let alternatingArticles = [];
-    let maxItems = Math.max(...normalSources.map(s => s.length), 0);
-    for (let i = 0; i < maxItems; i++) {
-        normalSources.forEach(list => {
-            if (list[i]) alternatingArticles.push(list[i]);
-        });
+    let alternating = [];
+    let max = Math.max(...normalSources.map(s => s.length), 0);
+    for (let i = 0; i < max; i++) {
+        normalSources.forEach(list => { if (list[i]) alternating.push(list[i]); });
     }
 
-    const finalArticles = [...pinnedArticles, ...alternatingArticles];
+    allArticlesParsed = [...pinnedArticles, ...alternating];
     updateUI();
-    render(finalArticles);
+    render();
 }
 
 function updateUI() {
@@ -121,33 +118,48 @@ function updateUI() {
         `<button class="btn-cat ${currentCat === c ? 'active' : ''}" onclick="setCat('${c}')">${c}</button>`
     ).join('');
 
+    const sel = document.getElementById('sourceSelect');
+    const curVal = sel.value;
+    sel.innerHTML = '<option value="Tous">Toutes les sources</option>';
+    sources.forEach(s => sel.innerHTML += `<option value="${s.name}">${s.name}</option>`);
+    sel.value = curVal;
+
     document.getElementById('sourceList').innerHTML = sources.map((s, i) => `
         <div class="source-item">
-            <span>${s.pinned ? '📌' : ''} ${s.name}</span>
-            <button onclick="removeSource(${i})" style="background:red; border:none; padding:5px;">Suppr.</button>
+            <div style="display:flex; flex-direction:column;">
+                <b>${s.name}</b>
+                <small style="color:#888;">${s.cat}</small>
+            </div>
+            <div style="display:flex; gap:5px;">
+                <button onclick="togglePinSource(${i})" style="background:${s.pinned?'#ffd700':'#444'}; color:${s.pinned?'#000':'#fff'}">${s.pinned?'📍':'📌'}</button>
+                <button onclick="removeSource(${i})" style="background:#cc0000;">X</button>
+            </div>
         </div>
     `).join('');
 }
 
-function render(articles) {
+function render() {
     const grid = document.getElementById('grid');
     const search = document.getElementById('search').value.toLowerCase();
+    const sourceF = document.getElementById('sourceSelect').value;
 
-    let filtered = articles.filter(a => {
-        const mS = a.title.toLowerCase().includes(search);
-        const mC = (currentCat === "Tous" || a.category === currentCat);
-        return mS && mC;
+    let filtered = allArticlesParsed.filter(a => {
+        const matchSearch = a.title.toLowerCase().includes(search);
+        const matchCat = (currentCat === "Tous" || a.category === currentCat);
+        const matchSrc = (sourceF === "Tous" || a.source === sourceF);
+        return matchSearch && matchCat && matchSrc;
     });
 
     grid.innerHTML = filtered.map(a => `
         <div class="card ${a.isPinnedSource ? 'is-pinned-source' : ''}">
             <a href="${a.link}" target="_blank" style="text-decoration:none; color:inherit;">
-                <img src="${a.img}" onerror="this.src='https://via.placeholder.com/400x200/222/555?text=Pas d\'image'">
+                <img src="${a.img}" onerror="this.src='https://via.placeholder.com/400x200/222/555?text=${a.source}'">
                 <div class="card-content">
                     <div class="card-title">${a.title}</div>
                     <div class="card-meta">
-                        <b>${a.source}</b> | ${timeAgo(a.date)} ago | ${a.category}
-                        <button onclick="event.preventDefault(); archive('${a.id}')" style="float:right; padding:2px 5px;">📦</button>
+                        <div><b>${a.source}</b> • ${a.category}</div>
+                        <div>🕒 ${a.date.toLocaleString('fr-FR', {day:'numeric', month:'short', hour:'2-digit', minute:'2-digit'})} (${timeAgo(a.date)} ago)</div>
+                        <button onclick="event.preventDefault(); archive('${a.id}')" style="margin-top:10px; width:100%; padding:5px; background:transparent; border:1px solid #444; color:#888; border-radius:5px;">📦 Archiver</button>
                     </div>
                 </div>
             </a>
@@ -155,30 +167,38 @@ function render(articles) {
     `).join('');
 }
 
-function setCat(c) { currentCat = c; fetchAll(); }
+function setCat(c) { currentCat = c; render(); }
 function archive(id) { 
     archived.push(id); 
     localStorage.setItem('nsc_archived', JSON.stringify(archived)); 
     fetchAll(); 
 }
+function togglePinSource(i) {
+    sources[i].pinned = !sources[i].pinned;
+    localStorage.setItem('nsc_sources', JSON.stringify(sources));
+    fetchAll();
+}
 function addSource() {
     const n = document.getElementById('newName').value;
     const u = document.getElementById('newUrl').value;
     const c = document.getElementById('newCat').value || "Info";
-    const p = document.getElementById('newPinned').checked;
     if(n && u) {
-        sources.push({name:n, url:u, cat:c, pinned:p});
+        sources.push({name:n, url:u, cat:c, pinned:false});
+        localStorage.setItem('nsc_sources', JSON.stringify(sources));
+        fetchAll();
+        document.getElementById('newName').value=''; document.getElementById('newUrl').value=''; document.getElementById('newCat').value='';
+    }
+}
+function removeSource(i) {
+    if(confirm("Supprimer cette source ?")) {
+        sources.splice(i, 1);
         localStorage.setItem('nsc_sources', JSON.stringify(sources));
         fetchAll();
     }
 }
-function removeSource(i) {
-    sources.splice(i, 1);
-    localStorage.setItem('nsc_sources', JSON.stringify(sources));
-    fetchAll();
-}
 
-document.getElementById('search').addEventListener('input', () => fetchAll());
+document.getElementById('search').addEventListener('input', render);
+document.getElementById('sourceSelect').addEventListener('change', render);
 fetchAll();
 </script>
 </body>
