--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Sans CNews v12</title>
+    <title>News Sans CNews v13</title>
     <style>
         :root { --bg: #121212; --card: #1e1e1e; --accent: #ffd700; --text: #eee; }
         body { margin: 0; font-family: sans-serif; background: var(--bg); color: var(--text); padding-bottom: 30px; }
@@ -23,7 +23,7 @@
         .card-meta { font-size: 0.75rem; color: #888; border-top: 1px solid #2d2d2d; padding-top: 6px; margin-top: auto; }
         #sourceModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 2000; padding: 20px; overflow-y: auto; }
         #helpModal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.98); z-index: 3000; padding: 20px; align-items: center; justify-content: center; }
-        .help-content { background: #1a1a1a; padding: 20px; border-radius: 15px; border: 1px solid var(--accent); max-width: 90%; }
+        .help-content { background: #1a1a1a; padding: 20px; border-radius: 15px; border: 1px solid var(--accent); max-width: 500px; line-height: 1.5; }
         .source-item { background: #252525; margin-bottom: 8px; border-radius: 8px; padding: 10px; border: 1px solid #444; }
     </style>
 </head>
@@ -49,10 +49,16 @@
 
 <div id="helpModal">
     <div class="help-content">
-        <h2 style="color:var(--accent); margin-top:0;">Lien RSS ? ❓</h2>
-        <p>Cherchez <b>"Nom du site + RSS"</b> sur Google.</p>
-        <p>Exemple NASA : <br><small>nasa.gov/rss/dyn/breaking_news.rss</small></p>
-        <button onclick="document.getElementById('helpModal').style.display='none'" style="width:100%; background:var(--accent); color:black; font-weight:bold; margin-top:10px; padding:10px; border-radius:8px;">OK</button>
+        <h2 style="color:var(--accent); margin-top:0;">C'est quoi un lien RSS ? ❓</h2>
+        <p>Un flux <b>RSS (ou XML)</b> est un lien spécial qui contient les derniers articles d'un site en temps réel.</p>
+        <p><b>Où les trouver ?</b><br>
+        1. Cherchez <i>"Nom du site + RSS"</i> sur Google.<br>
+        2. Sur les sites, cherchez l'icône orange 🟠 ou le mot "Flux".<br>
+        3. Exemples : <br>
+        - <i>lemonde.fr/rss/une.xml</i><br>
+        - <i>lequipe.fr/rss/actu_rss.xml</i><br>
+        - <i>nasa.gov/rss/dyn/breaking_news.rss</i></p>
+        <button onclick="document.getElementById('helpModal').style.display='none'" style="width:100%; background:var(--accent); color:black; font-weight:bold; margin-top:10px; padding:12px; border:none; border-radius:8px;">J'AI COMPRIS</button>
     </div>
 </div>
 
@@ -91,28 +97,30 @@ function timeAgo(date) {
 async function fetchAll() {
     if(isVaultView) return;
     let sourceBundles = {};
-    document.getElementById('grid').innerHTML = "<div style='text-align:center; padding:50px; color:#888;'>Chargement des images et news...</div>";
+    document.getElementById('grid').innerHTML = "<div style='text-align:center; padding:50px; color:#888;'>Récupération des données...</div>";
     
     await Promise.all(sources.map(async s => {
         try {
-            const res = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(s.url)}&t=${Date.now()}`);
+            const res = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(s.url)}&api_key=oyzdf0m6h6p1z0h8r5w5v5z5j0j0j0j0j0j0j0j0&t=${Date.now()}`);
             const data = await res.json();
             if(data.status === 'ok') {
                 sourceBundles[s.name] = data.items.map(item => {
-                    // DÉTECTION IMAGE AVANCÉE
+                    // DÉTECTION IMAGE NASA ULTRA-FORCÉE
                     let img = "";
                     if (item.enclosure && item.enclosure.link) img = item.enclosure.link;
-                    else if (item.thumbnail) img = item.thumbnail;
-                    else if (item.description && item.description.includes('<img')) {
+                    if (!img && item.thumbnail) img = item.thumbnail;
+                    if (!img && item.content && item.content.includes('<img')) {
+                        const m = item.content.match(/src="([^"]+)"/);
+                        if(m) img = m[1];
+                    }
+                    if (!img && item.description && item.description.includes('<img')) {
                         const m = item.description.match(/src="([^"]+)"/);
                         if(m) img = m[1];
                     }
-                    // Nettoyage de l'URL image (parfois relative ou mal formée)
-                    if (img && img.startsWith('//')) img = 'https:' + img;
-
+                    
                     return {
                         id: item.guid || item.link, title: item.title, link: item.link,
-                        img, source: s.name, category: s.cat,
+                        img: img, source: s.name, category: s.cat,
                         date: item.pubDate, isPinnedSource: s.pinned
                     };
                 });
@@ -194,13 +202,13 @@ function render() {
         return `
         <div class="card" style="${isHead ? 'border: 2px solid var(--accent)' : ''}">
             <a href="${a.link}" target="_blank" style="text-decoration:none; color:inherit;">
-                <img src="${a.img || 'https://via.placeholder.com/400x200/222/555?text='+a.source}" onerror="this.src='https://via.placeholder.com/400x200/222/555?text=${a.source}'">
+                <img src="${a.img || 'https://via.placeholder.com/400x200/222/555?text='+encodeURIComponent(a.source)}" onerror="this.src='https://via.placeholder.com/400x200/222/555?text=${encodeURIComponent(a.source)}'">
                 <div class="card-content">
                     <div class="card-title">${a.title}</div>
                     <div class="card-meta">
                         <b>${a.source}</b> • ${a.category}<br>
                         ${new Date(a.date).toLocaleDateString()} (${timeAgo(a.date)})
-                        <button onclick="event.preventDefault(); toggleSave('${a.id}')" style="margin-top:8px; width:100%; padding:8px; background:${inVault?'#2e7d32':'transparent'}; border:1px solid ${inVault?'#2e7d32':'#444'}; color:${inVault?'white':'#888'}; border-radius:5px; font-weight:bold;">
+                        <button onclick="event.preventDefault(); toggleSave('${a.id}')" style="margin-top:8px; width:100%; padding:10px; background:${inVault?'#2e7d32':'transparent'}; border:1px solid ${inVault?'#2e7d32':'#444'}; color:${inVault?'white':'#888'}; border-radius:5px; font-weight:bold;">
                             ${inVault ? '💾 DANS LE COFFRE' : '💾 SAUVEGARDER'}
                         </button>
                     </div>
