--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
         #readerView img { max-width: 100%; height: auto !important; border-radius: 8px; margin: 15px 0; display: block; }
         .option-box { background: var(--card); padding: 15px; border-radius: 12px; border: 1px solid var(--border); margin-bottom: 15px; }
         .rss-help { background: rgba(0,0,0,0.2); border: 1px dashed var(--accent); padding: 10px; font-size: 0.8rem; border-radius: 8px; margin-bottom: 15px; color: var(--meta); line-height: 1.4; }
+        
+        /* --- CORRECTION SECTION SOURCES --- */
         .source-item { padding: 10px 0; border-bottom: 1px solid var(--border); }
-        .source-grid { display: flex; gap: 5px; align-items: center; margin-bottom: 5px; }
-        .source-grid input { flex: 1; padding: 5px; background: var(--bg); border: 1px solid var(--border); color: var(--text); border-radius: 4px; font-size: 0.8rem; }
-        .pin-btn { min-width: 40px; background: var(--border); color: var(--text); border: none; cursor: pointer; }
+        .source-grid { display: flex; gap: 5px; align-items: center; margin-bottom: 5px; flex-wrap: wrap; }
+        .source-grid input { flex: 1; min-width: 120px; padding: 8px; background: var(--bg); border: 1px solid var(--border); color: var(--text); border-radius: 4px; font-size: 0.8rem; }
+        .pin-btn { min-width: 40px; background: var(--border); color: var(--text); border: none; cursor: pointer; height: 35px; }
         .pin-btn.pinned { background: var(--accent); color: #000; }
-        .del-btn { min-width: 40px; background: #ef4444; color: white; border: none; cursor: pointer; }
+        .del-btn { min-width: 40px; background: #ef4444; color: white; border: none; cursor: pointer; height: 35px; }
+        /* --------------------------------- */
+
         .spin { animation: rotation 1s infinite linear; }
         @keyframes rotation { from { transform: rotate(0deg); } to { transform: rotate(359deg); } }
     </style>
@@ -154,7 +158,6 @@ async function fetchAll() {
             const data = await res.json();
             if(data.status === 'ok') {
                 sourceBundles[s.name] = data.items.map(item => {
-                    // RÉTABLISSEMENT DU SCAN D'IMAGE (TYPE V17)
                     let imgUrl = item.enclosure?.link || item.thumbnail || "";
                     if (!imgUrl) {
                         const content = item.content || item.description || "";
