--- a/index.html
+++ b/index.html
@@ -3,18 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Les News sans Cnews</title>
+    <title>News</title>
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="NewsNSC">
-    <meta name="theme-color" content="#121212">
+    <meta name="apple-mobile-web-app-title" content="News">
+    <meta name="application-name" content="News">
+    <meta name="theme-color" content="#000000">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23000000%22/><text y=%2250%%22 x=%2250%%22 font-size=%2270%22 text-anchor=%22middle%22 dy=%22.35em%22 fill=%22white%22 font-family=%22Arial, sans-serif%22 font-weight=%22bold%22>N</text></svg>">
     <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23000000%22/><text y=%2250%%22 x=%2250%%22 font-size=%2270%22 text-anchor=%22middle%22 dy=%22.35em%22 fill=%22white%22 font-family=%22Arial, sans-serif%22 font-weight=%22bold%22>N</text></svg>">
 
     <style>
+        /* --- ÉCRAN DE DÉMARRAGE (SPLASH SCREEN) --- */
+        #splash-screen {
+            position: fixed;
+            inset: 0;
+            background: #000000;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 0.5s ease-out, visibility 0.5s;
+        }
+        #splash-screen svg { width: 120px; height: 120px; margin-bottom: 20px; }
+        #splash-screen h1 { color: white; font-family: sans-serif; font-size: 1.5rem; letter-spacing: 2px; }
+
         /* --- SYSTÈME DE THÈMES --- */
         :root { --bg: #121212; --card: #1e1e1e; --accent: #ffd700; --text: #eee; --meta: #aaa; --border: #333; --success: #2e7d32; --read-bg: var(--accent); --read-txt: #000; }
         
@@ -68,6 +84,14 @@
 </head>
 <body id="bodyTag">
 
+<div id="splash-screen">
+    <svg viewBox="0 0 100 100">
+        <rect width="100" height="100" fill="black"/>
+        <text y="50%" x="50%" font-size="70" text-anchor="middle" dy=".35em" fill="white" font-family="Arial, sans-serif" font-weight="bold">N</text>
+    </svg>
+    <h1>News</h1>
+</div>
+
 <div id="readerModal" class="full-modal">
     <div class="modal-header">
         <span id="readerSource" style="font-weight: bold;">Article</span>
@@ -108,7 +132,7 @@
     </div>
 </div>
 
-<header><h1>Les News sans Cnews</h1></header>
+<header><h1>News</h1></header>
 
 <div class="sticky-controls">
     <div class="controls">
@@ -133,6 +157,15 @@ let vault = JSON.parse(localStorage.getItem('nsc_vault')) || [];
 let allArticles = [];
 let isVaultView = false;
 let currentCat = "Tous";
+
+// GESTION DU SPLASH SCREEN
+window.addEventListener('load', () => {
+    setTimeout(() => {
+        const splash = document.getElementById('splash-screen');
+        splash.style.opacity = '0';
+        setTimeout(() => splash.style.visibility = 'hidden', 500);
+    }, 1500); // Reste 1.5 seconde
+});
 
 function openModal(id) { document.getElementById(id).style.display = 'block'; document.body.classList.add('modal-open'); }
 function closeModal(id) { document.getElementById(id).style.display = 'none'; document.body.classList.remove('modal-open'); }
