--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" style="background: #000000;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +9,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="News">
-    <meta name="application-name" content="News">
     <meta name="theme-color" content="#000000">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23000000%22/><text y=%2250%%22 x=%2250%%22 font-size=%2270%22 text-anchor=%22middle%22 dy=%22.35em%22 fill=%22white%22 font-family=%22Arial, sans-serif%22 font-weight=%22bold%22>N</text></svg>">
     <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%23000000%22/><text y=%2250%%22 x=%2250%%22 font-size=%2270%22 text-anchor=%22middle%22 dy=%22.35em%22 fill=%22white%22 font-family=%22Arial, sans-serif%22 font-weight=%22bold%22>N</text></svg>">
 
     <style>
-        /* --- ÉCRAN DE DÉMARRAGE (SPLASH SCREEN) --- */
         #splash-screen {
             position: fixed;
             inset: 0;
@@ -26,13 +24,18 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            transition: opacity 0.5s ease-out, visibility 0.5s;
+            opacity: 1;
+            visibility: visible;
+            transition: opacity 0.4s ease-out;
         }
         #splash-screen svg { width: 120px; height: 120px; margin-bottom: 20px; }
-        #splash-screen h1 { color: white; font-family: sans-serif; font-size: 1.5rem; letter-spacing: 2px; }
+        #splash-screen h1 { color: white; font-family: sans-serif; font-size: 1.5rem; letter-spacing: 2px; margin: 0; }
+        body { background: #000000; margin: 0; }
+    </style>
 
+    <style>
         /* --- SYSTÈME DE THÈMES --- */
-        :root { --bg: #121212; --card: #1e1e1e; --accent: #ffd700; --text: #eee; --meta: #aaa; --border: #333; --success: #2e7d32; --read-bg: var(--accent); --read-txt: #000; }
+        :root { --bg: #121212; --card: #1e1e1e; --accent: #ffd700; --text: #eee; --meta: #aaa; --border: #333; --read-bg: var(--accent); --read-txt: #000; }
         
         body.theme-night   { --bg: #000000; --card: #0a0a0a; --accent: #8e44ad; --text: #bbb; --meta: #666; --border: #222; --read-bg: #8e44ad; --read-txt: #fff; }
         body.theme-matrix  { --bg: #000000; --card: #001100; --accent: #00ff41; --text: #00ff41; --meta: #008f11; --border: #003b00; --read-bg: #00ff41; --read-txt: #000; }
@@ -47,7 +50,7 @@
         body.theme-copper  { --bg: #1a120b; --card: #2d1e12; --accent: #d97706; --text: #fef3c7; --meta: #92400e; --border: #452e1a; --read-bg: #d97706; --read-txt: #fff; }
         body.theme-cyber2  { --bg: #121212; --card: #1e1e1e; --accent: #ffd700; --text: #eee; --meta: #aaa; --border: #333; --read-bg: #444; --read-txt: #fff; }
 
-        body { margin: 0; font-family: sans-serif; background: var(--bg); color: var(--text); padding-bottom: 30px; transition: 0.3s; }
+        body { font-family: sans-serif; background: var(--bg); color: var(--text); padding-bottom: 30px; transition: background 0.3s; }
         body.modal-open { overflow: hidden; }
         header { background: rgba(0,0,0,0.2); padding: 10px; text-align: center; border-bottom: 1px solid var(--border); }
         .sticky-controls { position: sticky; top: 0; z-index: 1000; background: var(--bg); border-bottom: 2px solid var(--accent); }
@@ -158,13 +161,13 @@ let allArticles = [];
 let isVaultView = false;
 let currentCat = "Tous";
 
-// GESTION DU SPLASH SCREEN
+// MASQUER LE SPLASH SCREEN APRÈS LE CHARGEMENT
 window.addEventListener('load', () => {
     setTimeout(() => {
         const splash = document.getElementById('splash-screen');
         splash.style.opacity = '0';
-        setTimeout(() => splash.style.visibility = 'hidden', 500);
-    }, 1500); // Reste 1.5 seconde
+        setTimeout(() => splash.style.display = 'none', 400);
+    }, 1200);
 });
 
 function openModal(id) { document.getElementById(id).style.display = 'block'; document.body.classList.add('modal-open'); }
@@ -241,7 +244,7 @@ function render() {
 
         return `
         <div class="card" style="${a.isTop ? 'border: 2px solid var(--accent)' : ''}">
-            <img src="${a.img || 'https://via.placeholder.com/400x200/222/555?text='+a.source}" onclick="openReader('${a.id}')">
+            <img src="${a.img || 'https://via.placeholder.com/400x200/000/fff?text='+a.source}" onclick="openReader('${a.id}')">
             <div class="card-content">
                 <span class="card-title" onclick="openReader('${a.id}')">${a.isTop ? '📌 ':''}${a.title}</span>
                 <div style="font-size:0.75rem; color:var(--meta); margin-bottom:12px;">
